--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -5,10 +5,8 @@ name: Deploy to staging
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  # push:
-  #   branches: [ master ]
-  # pull_request:
-  #   branches: [ master ]
+  push:
+    branches: [master]
 
   # Allows you to run this workflow manually from the Actions tab
   # workflow_dispatch:
@@ -22,28 +20,50 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+       # Step 1
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      # Step 2
       - name: Setup Python
         uses: actions/setup-python@v2.2.2
         with:
           # Version range or exact version of a Python version to use, using SemVer's version range syntax.
           python-version: 3.9
-
+      # Step 3
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pylint
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      # Step 4
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # S3 Sync
-      - name: S3 Sync
-        uses: jakejarvis/s3-sync-action@v0.5.1
-        with: args --acl public-read --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }
-          AWS_REGION: "us-east-2"
-          SOURCe_DIR: "dist"
+      # Step 5 Unit test : TODO
+
+      # Deploy
+  deploy:
+      runs-on: ubuntu-latest
+      needs: [build]
+
+      if: github.ref == 'refs/heads/main'
+      steps:
+        # Step 1
+        - name: Configure AWS credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: ${{ secrets.AWS_REGION }}
+        # Step 2
+        - name: Create CodeDeploy Deployment
+          id: deploy
+          run: |
+            aws deploy create-deployment \
+              --application-name application-name \
+              --deployment-group-name AppDeploymentGroupName \
+              --deployment-config-name CodeDeployDefault.OneAtATime \
+              --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
