--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -20,7 +20,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-       # Step 1
+      # Step 1
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
@@ -37,33 +37,31 @@ jobs:
       # Step 4
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
+        with: aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region:${{ secrets.AWS_REGION }}
 
       # Step 5 Unit test : TODO
 
       # Deploy
   deploy:
-      runs-on: ubuntu-latest
-      needs: [build]
+    runs-on: ubuntu-latest
+    needs: [build]
 
-      if: github.ref == 'refs/heads/main'
-      steps:
-        # Step 1
-        - name: Configure AWS credentials
-          uses: aws-actions/configure-aws-credentials@v1
-          with:
-            aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: ${{ secrets.AWS_REGION }}
-        # Step 2
-        - name: Create CodeDeploy Deployment
-          id: deploy
-          run: |
-            aws deploy create-deployment \
-              --application-name application-name \
-              --deployment-group-name AppDeploymentGroupName \
-              --deployment-config-name CodeDeployDefault.OneAtATime \
-              --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
+    if: github.ref == 'refs/heads/main'
+    steps:
+      # Step 1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with: aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region:${{ secrets.AWS_REGION }}
+      # Step 2
+      - name: Create CodeDeploy Deployment
+        id: deploy
+        run: |
+          aws deploy create-deployment \
+            --application-name application-name \
+            --deployment-group-name AppDeploymentGroupName \
+            --deployment-config-name CodeDeployDefault.OneAtATime \
+            --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
