--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -37,13 +37,15 @@ jobs:
       # Step 4
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
-        with: aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region:${{ secrets.AWS_REGION }}
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # Step 5 Unit test : TODO
+  # Step 5 Run linter
+  # Step 6 Unit test : TODO
 
-      # Deploy
+  # Deploy
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
@@ -53,9 +55,10 @@ jobs:
       # Step 1
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
-        with: aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region:${{ secrets.AWS_REGION }}
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
       # Step 2
       - name: Create CodeDeploy Deployment
         id: deploy
