--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -48,7 +48,7 @@ jobs:
   # Deploy
   deploy:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: build
 
     if: github.ref == 'refs/heads/main'
     steps:
