--- a/appspec.yml
+++ b/appspec.yml
@@ -10,10 +10,11 @@ hooks:
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/setup.sh
+    - location: scripts/change_permissions.sh
       timeout: 300
       runas: root
   ApplicationStart:
+    - location: scripts/setup.sh
     - location: scripts/start.sh
       timeout: 300
       runas: root
