--- a/.pylintrc
+++ b/.pylintrc
@@ -150,6 +150,9 @@ disable=parameter-unpacking,
         too-many-branches,
         too-many-statements,
         too-many-locals,
+        too-many-function-args,
+        missing-module-docstring,
+        cell-var-from-loop
 
 
 # Enable the message, report, category or checker with the given id(s). You can
