Refactor, connect db (#42)
* refactor

* fix precommint pylint

* fix precommint pylint

* fix precommint pylint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,5 +5,5 @@ repos:
         name: pylint
         stages: [push]
         language: system
-        entry: pylint --disable=C0116 --ignore=venv
+        entry: pylint --rcfile=.pylintrc
         types: [python]
