--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
       - id: pylint
         name: pylint
-        stages: [push]
+        stages: [commit]
         language: system
         entry: pylint
         types: [python]
