--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,4 +19,4 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Analysing the code with pylint
         run: |
-          pylint --rcfile=.pylintrc `ls -R|grep .py$|xargs`
+          pylint --rcfile=.pylintrc $(git ls-files '*.py')
