--- a/.pylintrc
+++ b/.pylintrc
@@ -153,7 +153,8 @@ disable=parameter-unpacking,
         too-many-function-args,
         missing-module-docstring,
         cell-var-from-loop,
-        cyclic-import
+        cyclic-import,
+        broad-except
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
