--- a/.pylintrc
+++ b/.pylintrc
@@ -152,8 +152,9 @@ disable=parameter-unpacking,
         too-many-locals,
         too-many-function-args,
         missing-module-docstring,
-        cell-var-from-loop
-
+        cell-var-from-loop,
+        cyclic-import,
+        broad-except
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
